--- a/assets/css/_archive.scss
+++ b/assets/css/_archive.scss
@@ -69,12 +69,12 @@
 						margin: 0 0 5px;
 
 						a {
-							color: #6eb9e3;
+							color: #192b48;
 							text-decoration: none;
 							transition: color 0.2s;
 
 							&:hover {
-								color: #005177;
+								text-decoration: underline;
 							}
 						}
 					}
@@ -110,17 +110,15 @@
 				border-top: 1.5px solid #e3e6ea;
 
 				.active-installs {
-					font-size: 1em;
-					color: #fff;
+					color: #192b48;
 					font-weight: 700;
-					background: linear-gradient(90deg, #6eb9e3 0%, #182b49 100%);
-					padding: 6px 18px;
-					border-radius: 6px;
-					box-shadow: 0 1px 4px rgba(110, 185, 227, 0.1);
+					background: none;
 					margin: 0 0 0 0;
 					letter-spacing: 0.01em;
 					transition: background 0.2s;
 					display: flex;
+					box-shadow: none;
+					padding: 0px;
 					align-items: center;
 
 					span {
@@ -136,7 +134,7 @@
 						display: inline-flex;
 						align-items: center;
 						gap: 6px;
-						background: #6eb9e3;
+						background: #192b48;
 						color: #fff;
 						border: none;
 						border-radius: 4px;
@@ -278,6 +276,8 @@
 				}
 
 				footer {
+					align-items: center;
+
 					.active-installs {
 						font-size: 13px;
 						line-height: 16px;
