--- a/assets/css/_search-form.scss
+++ b/assets/css/_search-form.scss
@@ -31,7 +31,7 @@
 	}
 
 	button, .search-btn {
-		background: #6eb9e3;
+		background: #192b48;
 		color: #fff;
 		border: none;
 		border-radius: 4px;
@@ -46,7 +46,7 @@
 	}
 
 	button:hover, .search-btn:hover {
-		background: #4a9fd6;
+		background: #005177;
 	}
 }
 
