--- a/assets/css/_single.scss
+++ b/assets/css/_single.scss
@@ -44,7 +44,7 @@
 				font-weight: 600;
 
 				a {
-					color: #6eb9e3;
+					color: #192b48;
 					text-decoration: none;
 				}
 			}
@@ -65,7 +65,7 @@
 			a.button {
 				width: 100%;
 				padding: 10px;
-				background-color: #6eb9e3;
+				background-color: #192b48;
 				color: #fff;
 				border: none;
 				border-radius: 4px;
@@ -77,6 +77,15 @@
 				vertical-align: bottom;
 				display: inline-block;
 				box-sizing: border-box;
+
+				.dashicons {
+					font-size: 1.2em;
+					margin-right: 4px;
+				}
+
+				&:hover {
+					background-color: #005177;
+				}
 			}
 		}
 	}
