--- a/assets/css/aspire-explorer.css
+++ b/assets/css/aspire-explorer.css
@@ -29,7 +29,7 @@
   box-shadow: 0 0 0 2px rgba(110, 185, 227, 0.15);
 }
 .plugin-search-form button, .plugin-search-form .search-btn {
-  background: #6eb9e3;
+  background: #192b48;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -43,7 +43,7 @@
   gap: 6px;
 }
 .plugin-search-form button:hover, .plugin-search-form .search-btn:hover {
-  background: #4a9fd6;
+  background: #005177;
 }
 
 @media (max-width: 600px) {
@@ -122,12 +122,12 @@
   margin: 0 0 5px;
 }
 .archive-plugin-card ul li.plugin-card header .entry-title .plugin-title a {
-  color: #6eb9e3;
+  color: #192b48;
   text-decoration: none;
   transition: color 0.2s;
 }
 .archive-plugin-card ul li.plugin-card header .entry-title .plugin-title a:hover {
-  color: #005177;
+  text-decoration: underline;
 }
 .archive-plugin-card ul li.plugin-card header .entry-title .plugin-author,
 .archive-plugin-card ul li.plugin-card header .entry-title .plugin-version {
@@ -155,17 +155,15 @@
   border-top: 1.5px solid #e3e6ea;
 }
 .archive-plugin-card ul li.plugin-card footer .active-installs {
-  font-size: 1em;
-  color: #fff;
+  color: #192b48;
   font-weight: 700;
-  background: linear-gradient(90deg, #6eb9e3 0%, #182b49 100%);
-  padding: 6px 18px;
-  border-radius: 6px;
-  box-shadow: 0 1px 4px rgba(110, 185, 227, 0.1);
+  background: none;
   margin: 0 0 0 0;
   letter-spacing: 0.01em;
   transition: background 0.2s;
   display: flex;
+  box-shadow: none;
+  padding: 0px;
   align-items: center;
 }
 .archive-plugin-card ul li.plugin-card footer .active-installs span {
@@ -179,7 +177,7 @@
   display: inline-flex;
   align-items: center;
   gap: 6px;
-  background: #6eb9e3;
+  background: #192b48;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -297,6 +295,9 @@
     font-size: 15px;
     line-height: 22px;
   }
+  .archive-plugin-card ul li.plugin-card footer {
+    align-items: center;
+  }
   .archive-plugin-card ul li.plugin-card footer .active-installs {
     font-size: 13px;
     line-height: 16px;
@@ -378,7 +379,7 @@
   font-weight: 600;
 }
 .single-plugin-card header .entry-title .plugin-title a {
-  color: #6eb9e3;
+  color: #192b48;
   text-decoration: none;
 }
 .single-plugin-card header .entry-title .plugin-author {
@@ -397,7 +398,7 @@
 .single-plugin-card header .entry-download a.button {
   width: 100%;
   padding: 10px;
-  background-color: #6eb9e3;
+  background-color: #192b48;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -409,6 +410,13 @@
   vertical-align: bottom;
   display: inline-block;
   box-sizing: border-box;
+}
+.single-plugin-card header .entry-download a.button .dashicons {
+  font-size: 1.2em;
+  margin-right: 4px;
+}
+.single-plugin-card header .entry-download a.button:hover {
+  background-color: #005177;
 }
 .single-plugin-card .entry-main {
   display: flex;
