--- a/assets/css/aspire-explorer.css
+++ b/assets/css/aspire-explorer.css
@@ -538,6 +538,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  flex-wrap: wrap;
 }
 .archive-plugin-card .plugin-results .plugin-card footer .entry-tags ul.plugin-tags .plugin-tag,
 .archive-plugin-card .plugin-results .plugin-card footer .entry-tags ul.plugin-tags .theme-tag,
