--- a/assets/css/aspire-explorer.css
+++ b/assets/css/aspire-explorer.css
@@ -563,7 +563,7 @@
 .archive-theme-card .theme-results .plugin-card footer .entry-add-to-cart button,
 .archive-theme-card .theme-results .theme-card footer .entry-add-to-cart button {
   background: #6eb9e3;
-  color: #fff;
+  color: #000;
   border: none;
   border-radius: 4px;
   padding: 8px 18px;
@@ -722,7 +722,7 @@
 .archive-theme-card .pagination-wrapper ul li a.current,
 .archive-theme-card .pagination-wrapper ul li span.current {
   background: #6eb9e3;
-  color: #fff;
+  color: #000000;
   border-color: #6eb9e3;
 }
 .archive-plugin-card .pagination-wrapper ul li a:hover:not(.current):not(.dots),
@@ -730,7 +730,7 @@
 .archive-theme-card .pagination-wrapper ul li a:hover:not(.current):not(.dots),
 .archive-theme-card .pagination-wrapper ul li span:hover:not(.current):not(.dots) {
   background: #e9ecef;
-  color: #182b49;
+  color: #000000;
 }
 .archive-plugin-card .pagination-wrapper ul li a.dots,
 .archive-plugin-card .pagination-wrapper ul li span.dots,
